# rust-jwt

./: .env  .env.test  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
compose/local/nginx/: default.conf
compose/local/spa/: Dockerfile
front-end/: Dockerfile  package.json
front-end/app/api/: index.ts
front-end/app/api/models/: CreateUser.ts  LoginUser.ts  UserResponse.ts
front-end/app/api/services/: AuthService.ts
front-end/app/components/: Header.tsx
front-end/app/components/google/: GoogleLoginButton.tsx
front-end/app/routes/: _index.tsx  _protected._index.tsx  _protected.tsx  google.callback.tsx  login.tsx  session.refresh.tsx
front-end/schemas/: login.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20251028_202638_create_users.rs  m20251101_095828_add_hashed_pwd_to_user.rs
src/: lib.rs  main  main.rs  setup.rs
src/core/errors/: app.rs
src/entities/: mod.rs  prelude.rs  users.rs
src/entities/extensions/: models.rs
src/routes/: auth.rs  google.rs  mod.rs
src/services/: auth.rs
src/settings/: config.rs  helpers.rs  mod.rs
tests/: auth_register_user.rs  utils.rs
