[package]
name = "API"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = "0.8.6"
axum-extra = {version="0.12.0", features=["typed-header"]}
anyhow = "1.0.100"

# OpenAPI + UI (enable the axum feature!)
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6", features = ["axum"] }

# DB (unchanged)
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-query = "0.32.7"

dotenvy = "0.15"
argon2 = "0.5.3"
async-trait = "0.1.89"
jsonwebtoken = {version="10.1.0", features=["rust_crypto"]}
time = "0.3.44"
headers = "0.4.1"
